--- a/theme/scss/components/_component.buttons.scss
+++ b/theme/scss/components/_component.buttons.scss
@@ -4,6 +4,7 @@
     line-height: 1;
     text-align: center;
     text-transform: uppercase;
+    text-decoration: none;
     white-space: normal;
     vertical-align: middle;
     user-select: none;
