--- a/theme/scss/components/_component.cards.scss
+++ b/theme/scss/components/_component.cards.scss
@@ -54,7 +54,7 @@ $c-card-spacer:                         $app-spacer-sm;
 .c-card__header {
     font-family: $c-card-font-family-highlight;
     font-size: $app-font-size-h5;
-    font-weight: $app-font-weight-strong;
+    font-weight: 300;
     padding: $c-card-spacer;
     background: $c-card-cap-bg;
     @include when-inside('.c-card--default') {
