--- a/resources/theme/mhb.theme/styles/main.css
+++ b/resources/theme/mhb.theme/styles/main.css
@@ -11736,6 +11736,9 @@ c-list--bordered .c-list__item:last-of-type {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -11748,6 +11751,13 @@ c-list--bordered .c-list__item:last-of-type {
 
 .c-page-header__meta > * {
   padding-right: calc(1.5rem * 1.5 / 2);
+}
+
+.c-page-header__meta > *:first-child {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 100%;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
 }
 
 .c-widget--hph-content-alias {
